# YAWE

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.yaml  .gitattributes  .gitignore  .hound.yml  .jscsrc  .prettierrc.toml  .scss-lint.yml  .travis.yml  .uncss_helper.html  Building.md  Cargo.toml  LICENSE.md  README.md  app.html  bootstrap.min.css  bower.json  circle.yml  gulpfile.babel.js  gulpfile.js  index.coffee  index.html  index.js  index.min.js  jquery.js  manifest.json  options.coffee  options.html  options.js  options.min.js  package-lock.json  package.json  plugins.js  popup.html  popup.js  search.html  search.js  search.min.js  (+6 more)
.github/: renovate.json
.github/workflows/: v4.yml
bootswatch/amelia/: bootstrap.css  bootstrap.min.css  bootswatch.less  style.css
bootswatch/cerulean/: bootstrap.css  bootstrap.min.css  style.css
bootswatch/classic/: bootstrap.css  bootstrap.min.css  bootswatch.less  builder.less  style.css
bootswatch/cosmo/: bootstrap.css  bootstrap.min.css  bootswatch.less  style.css
bootswatch/cupid/: bootswatch.less  style.css
bootswatch/custom/: bootstrap.css  bootstrap.min.css  style.css
bootswatch/cyborg/: bootstrap.css  bootstrap.min.css  bootswatch.less  style.css
bootswatch/flatly/: bootstrap.css  bootstrap.min.css  bootswatch.less  style.css
bootswatch/global/: global.less  icons.less  navbar.less  tables.less  variables.less
bootswatch/journal/: bootstrap.css  bootstrap.min.css  bootswatch.less  style.css
bootswatch/lumen/: bootswatch.less  style.css
bootswatch/readable/: bootstrap.css  bootstrap.min.css  bootswatch.less  style.css
bootswatch/simplex/: bootstrap.css  bootstrap.min.css  style.css
bootswatch/slate/: bootstrap.css  bootstrap.min.css  bootswatch.less  style.css
bootswatch/spacelab/: bootstrap.css  bootstrap.min.css  bootswatch.less  style.css
bootswatch/superhero/: bootswatch.less  style.css
bootswatch/united/: bootstrap.css  bootstrap.min.css  bootswatch.less  builder.less  style.css
coffee/: app.coffee  index.coffee  options.coffee  popup.coffee
docs/: index.html
docs/demo/: app.html  index.html  options.html
min/: app.min.js  index.min.js  options.min.js  plugins.js  popup.min.js
site/: index.html
site/demo/: app.html  options.html
src/: app.html  app.rs  autocomplete_service.rs  lib.rs  manifest.json  options.html
src/chrome/: index.html  manifest.json
src/firefox/: index.js  package.json
src/generic/: manifest.json
src/html/: app.html  index.html  options.html
src/js/: app.js  app.ts  helper.js  helper.ts  navigation.js  (+5 more)
static/: index.html
(+65 files in other folders)
