[package]
name = "yawe"
version = "5.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.51"
log = "0.4"
http = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.7.0"
strum = "0.21"
strum_macros = "0.20.1"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
wasm-logger = "0.2"
yew = "0.18"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.51"
features = [
    "AbortController",
    "AbortSignal",
    "Headers",
    "ObserverCallback",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Window",
]
