[package]
name = "yawe"
version = "5.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.66"
log = "0.4"
http = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.7.1"
strum = "0.25"
strum_macros = "0.25.3"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
wasm-logger = "0.2"
yew = "0.21"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.66"
features = [
    "AbortController",
    "AbortSignal",
    "Headers",
    "ObserverCallback",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Window",
]
